<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/value_1"
                    android:autofillHints="@string/valor_1"
                    tools:ignore="LabelFor"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/valor_1" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/value_2"
                    android:autofillHints="@string/valor_2"
                    tools:ignore="LabelFor"
                    android:hint="@string/valor_2" />

            <TextView
                    android:text="@string/total"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:id="@+id/total"
                    android:layout_marginTop="30dp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="381dp"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

            <Button
                    android:text="@string/suma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    app:backgroundTint="#5A5033"
                    android:onClick="sumar" />

            <Button
                    android:text="@string/resta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    app:backgroundTint="#C55B5B"
                    android:onClick="restar" />

            <Button
                    android:text="@string/multiplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    app:backgroundTint="#276A62"
                    android:onClick="multiplicar" />

            <Button
                    android:text="@string/division"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    app:backgroundTint="#DD33D5"
                    android:onClick="dividir" />

            <Button
                    android:text="@string/limpiar"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:id="@+id/button5"
                    android:layout_marginTop="30dp"
                    android:onClick="limpiar" />
        </LinearLayout>
</LinearLayout>